--- a/Project/TSBK03.vcxproj.filters
+++ b/Project/TSBK03.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Header Files\common\Externals">
       <UniqueIdentifier>{38726a6d-a086-4034-a000-cd8163bdce8f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Shaders">
+      <UniqueIdentifier>{d88f6b57-37dd-4a8d-92f1-b62e66b5b161}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -40,9 +43,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Particles.cc">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\TransformFeedback.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\common\loadobj.cc">
@@ -86,11 +86,34 @@
     <ClInclude Include="src\Particles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\TransformFeedback.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Program.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\shaders\billboard.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\billboard.geom">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\billboard.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\culling.geom">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\culling.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\particle.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\particle.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\update.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
