Added computeshader to calculate bin and the number of particles in each bin. Also made a temporary CPU solution to prefix sum and removed all the mapping of buffers, this was really slow for some parts

--- a/Project/TSBK03.vcxproj
+++ b/Project/TSBK03.vcxproj
@@ -196,6 +196,7 @@
     <None Include="src\shaders\billboard.frag" />
     <None Include="src\shaders\billboard.geom" />
     <None Include="src\shaders\billboard.vert" />
+    <None Include="src\shaders\bin.comp" />
     <None Include="src\shaders\cull.comp" />
     <None Include="src\shaders\culling.geom" />
     <None Include="src\shaders\culling.vert" />
