--- a/Project/TSBK03.vcxproj.filters
+++ b/Project/TSBK03.vcxproj.filters
@@ -136,5 +136,8 @@
     <None Include="src\shaders\update.comp">
       <Filter>Source Files\Shaders\Compute</Filter>
     </None>
+    <None Include="src\shaders\bin.comp">
+      <Filter>Source Files\Shaders\Compute</Filter>
+    </None>
   </ItemGroup>
 </Project>
